2006-05-13  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * Replace tabs with spaces in all .cs files.

2006-05-10  Patrick van Staveren  <trick@vanstaveren.us>
    * Converted windows to dialogs.  This is so the WM knows they're dialogs and treats them as so.  Minor change from a window, but worth it.
    * AlarmConfigDialog.cs - how it accesses widgets to read variables.  Simpler.  Private variables & such.
    * AlarmConfigDialog.cs - got rid of outer frame (since everything else it was framing from has moved to the plugin config page.
    * AlarmConfigDialog & SleepTimerConfigDialog - moved some settings to the constructor.  Might make more sense.
    * Random padding changes to be consistent
    * Quick string changes in Plugin.cs

2006-05-08  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * Fix crash when AlarmCommand is not set.
    * Renamed AlarmConfigPage to AlarmConfigDialog, it's a Window now.

2006-05-07  Patrick van Staveren  <trick@vanstaveren.us>
    * Added alarm external command execution
    * Moved alarm configuration options (volume fade, command exec) to plugin's config page
    * Fixed dispose bug with not removing menu entries when unloading plugin

2006-04-21  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick autogen.sh fix of project name
	* Added Enabled checkbox to alarm config - enables/disables the alarm
	* Clean up AlarmConfigPage text formatting
	* AlarmConfigPage - don't do debug outputs (open GNOME Config Editor if you need this)
	* VolumeFade - debug a bit more, compare final volume to internal variable and not buggy PlayerEngineCore.Volume
	
2006-04-19  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick fix - VolumeFade was not working due to PlayerEngineCore.Volume not updating itself fast enough.  Fixed!

2006-04-13  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick bugfix - require banshee 0.10.8 in configure.ac - due to PlayerEngineCore changes that were introduced in 0.10.8.
