@@ -1,7 +1,6 @@
-SUBDIRS = src
-
-EXTRA_DIST =	\
-	$(schema_DATA)
+SUBDIRS =   \
+    data    \
+    src
 
 MAINTAINERCLEANFILES = \
 	compile \
@@ -17,13 +16,3 @@ MAINTAINERCLEANFILES = \
 	config.sub \
 	config.guess \
 	mkinstalldirs
-
-schemadir = $(GCONF_SCHEMA_FILE_DIR)
-schema_DATA = data/alarm.schemas
-
-if GCONF_SCHEMAS_INSTALL
-install-data-local:
-	if [ -z "$(DESTDIR)" ]; then \
-		GCONF_CONFIG_SOURCE="" $(GCONFTOOL) --makefile-install-rule $(builddir)$(schema_DATA); \
-	fi
-endif
