@@ -35,6 +35,7 @@
     <File name="./src/SleepTimerConfigDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/ConfigurationWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/AlarmConfigDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="./data/Makefile.am" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
