@@ -1,4 +1,4 @@
-MCS_FLAGS = -debug
+CUSTOM_MCS_FLAGS = $(MCS_FLAGS)
 ASSEMBLY = Alarm.dll
 SOURCES = \
 	$(srcdir)/Plugin.cs \
@@ -14,7 +14,7 @@ plugin_SCRIPTS = $(ASSEMBLY) $(ASSEMBLY).mdb
 all: $(ASSEMBLY)
 
 $(ASSEMBLY): $(SOURCES)
-	$(MCS) $(MCS_FLAGS) -out:$(ASSEMBLY) -target:library $(BANSHEE_LIBS) $(SOURCES)
+	$(MCS) $(CUSTOM_MCS_FLAGS) -out:$(ASSEMBLY) -target:library $(BANSHEE_LIBS) $(SOURCES)
 
 EXTRA_DIST = $(SOURCES)
 CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
